--- a/WindowsFormsApplication1/WindowsFormsApplication1/Player v2.0.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1/Player v2.0.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="code\Player.cs" />
+    <Compile Include="code\PlayLists.cs" />
     <Compile Include="code\TagReader.cs" />
     <Compile Include="code\WorkClass.cs" />
     <Compile Include="Form1.cs">
